echo-test2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-test2
  labels:
    app: echo-test2
    ver: '2'
    env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-test2
      ver: '2'
      env: prod
  template:
    metadata:
      labels:
        app: echo-test2
        ver: '2'
        env: prod
    spec:
      containers:
      - args:
        - -text=teste ntop2
        name: echo-test2
        image: hashicorp/http-echo:latest
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: echo-test2
spec:
  selector:
    app: echo-test2
  ports:
    - port: 5678
