ingress-path.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-path
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: estudo.com.br
    http:
      paths:
      - path: /echo-test
        backend:
          serviceName: echo-test
          servicePort: 5678
      - path: /echo-test2              
        backend:
          serviceName: echo-test2
          servicePort: 5678
